--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -3,26 +3,23 @@ h1 {
   font-weight: normal;
   margin-bottom: 0;
   text-shadow: 0px 4px 0px #0000001f;
-}
-
-p {
-  margin: 0;
-  font-size: 0.75rem;
-  text-shadow: 0px 2px 0px #0000001f;
+  margin: 0px;
 }
 
 .container {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
+  height: 6vh;
 }
 
 .navContainer {
-  margin-top: 2vh;
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
+  width: 80%;
+  height: 100%;
   justify-content: space-evenly;
+  align-items: flex-end;
 }
 
 .linkButton {
