--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -20,6 +20,8 @@ h1 {
   height: 100%;
   justify-content: space-evenly;
   align-items: flex-end;
+  list-style: none;
+  padding: 0px;
 }
 
 .linkButton {
@@ -27,3 +29,4 @@ h1 {
   /* background-color: #f00; */
   /* border: 1px; */
 }
+
