--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -8,7 +8,6 @@ h1 {
 
 .container {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   height: 6vh;
 }
@@ -16,17 +15,30 @@ h1 {
 .navContainer {
   display: flex;
   flex-wrap: wrap;
-  width: 80%;
+  min-width: 70%;
   height: 100%;
   justify-content: space-evenly;
   align-items: flex-end;
-  list-style: none;
-  padding: 0px;
 }
 
 .linkButton {
   width: 100px;
-  /* background-color: #f00; */
-  /* border: 1px; */
+  border: 1px;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .navContainer {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: auto;
+    align-items: center;
+    align-content: space-around;
+    height: 12rem;
+  }
 }
 
