--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -1,14 +1,13 @@
 h1 {
   font-size: 4rem;
   font-weight: normal;
-  margin-bottom: 0;
   text-shadow: 0px 4px 0px #0000001f;
   margin: 0px;
 }
 
 .container {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .container .header button {
@@ -18,6 +17,7 @@ h1 {
 .navContainer {
   display: flex;
   flex-wrap: wrap;
+  flex: 1;
   min-width: 70%;
   height: 100%;
   justify-content: space-evenly;
@@ -25,8 +25,13 @@ h1 {
 }
 
 .linkButton {
-  width: 100px;
+  min-width: 100px;
   border: 1px;
+  cursor: pointer;
+}
+
+.linkContainer {
+  margin-bottom: 10px;
 }
 
 @media screen and (max-width: 600px) {
